z_non-application/observability/sandbox-grafana-httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: sandbox-grafana-http-route
  namespace: grafana
spec:
  parentRefs:
  - kind: Gateway
    name: gke-external-gateway
    namespace: non-application
    sectionName: https
  hostnames:
  - "sandbox-grafana.cloudphysicianworld.org"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - group: ""
      name: prometheus-grafana
      kind: Service
      port: 80
      namespace: grafana
